objects/DMAPP__DM_Market_View_Report_Team__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Market_View_Report__c</fullName>
        <label>Market View Report</label>
        <referenceTo>DMAPP__DM_Market_View_Report__c</referenceTo>
        <relationshipLabel>Market View Team Members</relationshipLabel>
        <relationshipName>Market_View_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Market_View_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Market View Team Member</label>
    <nameField>
        <label>Market View Team</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market View Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>